[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]

rand = "0.8.5"
rc4 = "0.1.0"
sysinfo = "0.29.11"
windows = { version = "0.52.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp"] }
